--- a/packages/vite-app-ts/src/styles/css/app.css
+++ b/packages/vite-app-ts/src/styles/css/app.css
@@ -68,6 +68,19 @@ button {
   align-items: center;
 }
 
-.Owners > span > span {
+.Owners,
+.n-signers > span > span {
   font-size: medium !important;
+}
+
+.n-addressAdjustement > span > span {
+  font-size: medium !important;
+}
+
+/* .n-signers > span > span {
+  font-size: 5px !important;
+  border: 1px solid red;
+} */
+.n-poolBalance > span {
+  font-size: small !important;
 }
